--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Chatbot</title>
-  </head>
-  <body>
-    <div class="chatbot">
-      <div class="chatbot-text-box">
-        <h2 class="heading">Chatbot</h2>
-        <div class="messagebox"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
 
-        <form class="chatbot-form" action="#">
-          <div>
-            <label for="your-message"></label>
-            <input
-              id="your-message"
-              type="text"
-              placeholder="Your message"
-              required
-            />
-          </div>
 
-          <button id="btn--send" class="btn btn--form">Send</button>
-        </form>
-      </div>
-      <div class="chatbot-img-box" role="img"></div>
-    </div>
 
-    <script src="script.js"></script>
-  </body>
+    TEST TEST TEST 22222222
+    3333333333333333333
+
+
+    
+</body>
 </html>
