--- a/index.html
+++ b/index.html
@@ -11,11 +11,29 @@
     <div class="chatbot">
       <div class="chatbot-text-box">
         <h2 class="heading">Chatbot</h2>
-        <div class="messagebox"></div>
+        <div class="messagebox">
+          <div class="user-box">
+            <div class="user-text-style">
+              <p class="user-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia id voluptas natus consequuntur, atque officiis error
+                blanditiis nostrum repudiandae eum minima.
+              </p>
+            </div>
+          </div>
+          <div class="chatbot-box">
+            <div class="chatbot-text-style">
+              <p class="user-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia id voluptas natus consequuntur, atque officiis error
+                blanditiis nostrum repudiandae eum minima.
+              </p>
+            </div>
+          </div>
+        </div>
 
         <form class="chatbot-form" action="#">
           <div>
-            <label for="your-message"></label>
             <input
               id="your-message"
               type="text"
