--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="messagebox">
           <div class="user-box">
             <div class="user-text-style">
-              <p class="user-text">
+              <p class="user-text" id="userText">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Mollitia id voluptas natus consequuntur, atque officiis error
                 blanditiis nostrum repudiandae eum minima.
@@ -23,7 +23,7 @@
           </div>
           <div class="chatbot-box">
             <div class="chatbot-text-style">
-              <p class="user-text">
+              <p class="user-text" id="chatbotText">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Mollitia id voluptas natus consequuntur, atque officiis error
                 blanditiis nostrum repudiandae eum minima.
