--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               <p class="user-text" id="userText"></p>
             </div>
           </div>
+
           <div class="chatbot-box">
             <div class="chatbot-text-style">
               <p class="user-text" id="chatbotText"></p>
@@ -34,7 +35,9 @@
             />
           </div>
 
-          <button class="btn btn--form" onclick="submitText()">Send</button>
+          <button class="btn btn--form" onclick="chatbot(), submitText()">
+            Send
+          </button>
         </div>
       </div>
       <div class="chatbot-img-box" role="img"></div>
